# candlewick

./: .clang-format  .clangd  .gersemirc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pixi.toml  process_shaders.py  pyproject.toml
.github/workflows/: macos-linux-windows-pixi.yml
assets/: BlinnPhongBasic.frag  Hud3dElement.frag  Hud3dElement.vert  PbrBasic.frag  PbrBasic.vert  SolidColor.frag  VertexColor.frag  VertexColor.vert  VertexNormal.vert  process_shaders.py
assets/shaders/compiled/: BlinnPhong.frag.spv  DrawQuad.vert.msl  DrawQuad.vert.spv  FrustumDebug.vert.msl  FrustumDebug.vert.spv  Hud3dElement.frag.spv  Hud3dElement.vert.spv  PbrBasic.frag.json  PbrBasic.frag.msl  PbrBasic.frag.spv  PbrBasic.vert.msl  PbrBasic.vert.spv  PointSprite.frag.spv  PointSprite.vert.msl  RenderDepth.frag.msl  RenderDepth.frag.spv  SSAO.frag.json  SSAO.frag.msl  SSAO.frag.spv  ScreenSpaceShadows.frag.json  ScreenSpaceShadows.frag.msl  ScreenSpaceShadows.frag.spv  ScreenSpaceShadows.vert.msl  ScreenSpaceShadows.vert.spv  ShadowCast.frag.msl  ShadowCast.frag.spv  ShadowCast.vert.msl  ShadowCast.vert.spv  SolidColor.frag.msl  SolidColor.frag.spv  VertexColor.frag.msl  VertexColor.vert.spv  VertexNormal.frag.msl  VertexNormal.frag.spv  VertexNormal.vert.msl  VertexNormal.vert.spv
assets/shaders/src/: BasicTriangle.vert  BlinnPhong.frag  FrustumDebug.vert  Hud3dElement.frag  Hud3dElement.vert  PbrBasic.frag  PbrBasic.vert  PointSprite.vert  RenderDepth.frag  SSAO.frag  ScreenSpaceShadows.frag  ScreenSpaceShadows.vert  ShadowCast.frag  ShadowCast.vert  VertexColor.vert  depth_utils.glsl  pbr_material.glsl  tone_mapping.glsl
doc/: Doxyfile.extra.in
examples/: CMakeLists.txt  LitMesh.cpp  MeshNormalsRgb.cpp
examples/lib/: Common.h  GenHeightfield.cpp  PerlinNoise.h
examples/python/: go2.py  show_robot_description.py  test_visualizer.py
modules/: FindFFmpeg.cmake
python/: CMakeLists.txt  module.cpp  visualizer.cpp
python/candlewick/: __init__.py
python/src/: expose-renderer.cpp  expose-visualizer.cpp  fwd.hpp  module.cpp
scripts/pixi/: activation.sh
shaders/compiled/: BasicTriangle.vert.msl  BasicTriangle.vert.spv  FrustumDebug.vert.msl  Hud3dElement.frag.msl  Hud3dElement.vert.msl  Hud3dElement.vert.spv  PbrBasic.vert.json  PbrBasic.vert.msl  PbrBasic.vert.spv  PointSprite.frag.json  PointSprite.frag.msl  PointSprite.vert.msl  PointSprite.vert.spv  RenderDepth.frag.spv  SSAO.frag.spv  SSAOblur.frag.msl  SSAOblur.frag.spv  ShadowCast.frag.msl  ShadowCast.vert.json  ShadowCast.vert.msl  ShadowCast.vert.spv  VertexColor.frag.spv  VertexColor.vert.msl  VertexColor.vert.spv  VertexNormal.frag.spv  VertexNormal.vert.spv
shaders/src/: DrawQuad.vert  PbrBasic.vert  PointSprite.frag  PointSprite.vert  RenderDepth.frag  SSAOblur.frag  ScreenSpaceShadows.frag  ShadowCast.vert  SolidColor.frag  VertexColor.vert  VertexNormal.frag  depth_utils.glsl
src/: CMakeLists.txt
src/candlewick/core/: AABB.cpp  AABB.h  BoundingBox.h  Camera.cpp  Camera.h  CameraControl.cpp  CameraControl.h  CameraControls.h  Collision.h  CommandBuffer.cpp  CommandBuffer.h  Components.h  CopyBuffer.cpp  CopyBuffer.h  Core.h  DebugScene.cpp  DebugScene.h  DefaultVertex.h  DepthAndShadowPass.cpp  DepthAndShadowPass.h  Device.cpp  Device.h  GuiSystem.cpp  GuiSystem.h  LightUniforms.h  MaterialUniform.h  Mesh.cpp  Mesh.h  MeshGroup.cpp  MeshGroup.h  MeshLayout.cpp  MeshLayout.h  OBB.cpp  OBB.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  Shape.cpp  (+17 more)
src/candlewick/core/debug/: DepthViz.cpp  DepthViz.h  Frustum.cpp  Frustum.h  FrustumDebugSystem.cpp  FrustumDebugSystem.h
src/candlewick/gui/: CMakeLists.txt  imgui_impl_sdl3_extend.cpp  imgui_impl_sdl3_extend.h  imgui_sdl_gpu.cpp  imgui_sdl_gpu.h
src/candlewick/multibody/: Components.h  LoadCoalPrimitives.cpp  LoadCoalPrimitives.h  LoadPinocchioGeometry.cpp  LoadPinocchioGeometry.h  LoadUrdf.cpp  LoadUrdf.h  Multibody.h  RobotDebug.cpp  RobotDebug.h  RobotScene.cpp  RobotScene.h  Visualizer.cpp  Visualizer.h
src/candlewick/multibody/internal/: instantiate_pin_viz.cpp  visualizer_event_loop.cpp  visualizer_events_gui.cpp  visualizer_gui.cpp
src/candlewick/posteffects/: SSAO.cpp  SSAO.h  ScreenSpaceShadows.cpp  ScreenSpaceShadows.h
src/candlewick/primitives/: Arrow.cpp  Arrow.h  Capsule.cpp  Capsule.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Frustum.cpp  Frustum.h  Grid.cpp  Grid.h  Heightfield.cpp  Heightfield.h  Internal.cpp  Internal.h  Plane.cpp  Plane.h  Primitives.h  Sphere.cpp  Sphere.h
src/candlewick/utils/: CameraControl.cpp  CameraControl.h  CameraState.h  CylinderControl.h  DefaultVertex.h  DumpImage.cpp  DumpImage.h  Frustum.h  LoadMaterial.cpp  LoadMaterial.h  LoadMesh.cpp  LoadMesh.h  MaterialData.cpp  MaterialData.h  MeshData.cpp  MeshData.h  MeshDataView.cpp  MeshDataView.h  MeshGroup.cpp  MeshGroup.h  MeshTransforms.cpp  MeshTransforms.h  PixelFormatConversion.cpp  PixelFormatConversion.h  UploadMesh.cpp  UploadMesh.h  Utils.h  VertexDataBlob.h  VideoRecorder.cpp  VideoRecorder.h  WriteTextureToImage.cpp  WriteTextureToImage.h  assimp_convert.h  load_mesh.cpp  load_mesh.h
tests/: CMakeLists.txt  ColoredCube.cpp  Common.cpp  Common.h  Cube.cpp  LitMesh.cpp  MeshNormalsRgb.cpp  TestMeshData.cpp  TestVertexBlob.cpp  Triangle.cpp  Ur5.cpp  Ur5WithSystems.cpp  Visualizer.cpp  load_mesh.cpp  math_util.cpp  math_util.hpp  sdl_window.cpp
tests/lib/: Common.cpp  Common.h  GenHeightfield.h  PerlinNoise.cpp  PerlinNoise.h
tests/python/: test_go2.py  test_visualizer.py
